--- a/mscore/box.ui
+++ b/mscore/box.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>677</width>
-    <height>132</height>
+    <width>693</width>
+    <height>138</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
@@ -42,21 +42,21 @@
       <item row="2" column="6">
        <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>bottomMargin:</string>
+         <string notr="true">bottomMargin:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>topGap:</string>
+         <string notr="true">topGap:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="2">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>bottomGap:</string>
+         <string notr="true">bottomGap:</string>
         </property>
        </widget>
       </item>
@@ -117,7 +117,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>leftMargin:</string>
+         <string notr="true">leftMargin:</string>
         </property>
        </widget>
       </item>
@@ -134,14 +134,14 @@
       <item row="2" column="4">
        <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>topMargin:</string>
+         <string notr="true">topMargin:</string>
         </property>
        </widget>
       </item>
       <item row="2" column="2">
        <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>rightMargin:</string>
+         <string notr="true">rightMargin:</string>
         </property>
        </widget>
       </item>
