--- a/mscore/chordrest.ui
+++ b/mscore/chordrest.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>512</width>
-    <height>243</height>
+    <width>525</width>
+    <height>266</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout">
    <item>
@@ -445,7 +445,7 @@
       <item row="0" column="3" rowspan="2">
        <widget class="QLabel" name="label_13">
         <property name="text">
-         <string>Lyrics:</string>
+         <string notr="true">Lyrics:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
