--- a/mscore/debugger.ui
+++ b/mscore/debugger.ui
@@ -12,7 +12,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -69,7 +69,7 @@
         <string notr="true">Select Element</string>
        </property>
        <property name="text">
-        <string>Select</string>
+        <string notr="true">Select</string>
        </property>
       </widget>
      </item>
@@ -99,7 +99,7 @@
      <item>
       <widget class="QToolButton" name="layoutButton">
        <property name="text">
-        <string>Layout</string>
+        <string notr="true">Layout</string>
        </property>
       </widget>
      </item>
