--- a/mscore/instrwizard.ui
+++ b/mscore/instrwizard.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="10,0,15">
    <item>
