--- a/mscore/line.ui
+++ b/mscore/line.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>477</width>
-    <height>72</height>
+    <height>84</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QGridLayout">
    <item row="0" column="0" colspan="2">
@@ -28,7 +28,7 @@
         <item row="0" column="0">
          <widget class="QCheckBox" name="diagonal">
           <property name="text">
-           <string notr="true">digonal</string>
+           <string notr="true">diagonal</string>
           </property>
          </widget>
         </item>
