--- a/mscore/linesegment.ui
+++ b/mscore/linesegment.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QGridLayout">
    <item row="0" column="0" colspan="2">
