--- a/mscore/page.ui
+++ b/mscore/page.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string notr="true"/>
   </property>
   <layout class="QGridLayout">
    <property name="margin">
@@ -23,7 +23,7 @@
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Page</string>
+      <string notr="true">Page</string>
      </property>
      <property name="flat">
       <bool>false</bool>
@@ -58,7 +58,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Page No.:</string>
+         <string notr="true">Page No.:</string>
         </property>
         <property name="textFormat">
          <enum>Qt::PlainText</enum>
