--- a/mscore/rest.ui
+++ b/mscore/rest.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>512</width>
-    <height>92</height>
+    <height>113</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout">
    <item>
