--- a/mscore/textproperties.ui
+++ b/mscore/textproperties.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>557</width>
-    <height>494</height>
+    <height>533</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
