--- a/mscore/tremolo.ui
+++ b/mscore/tremolo.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>403</width>
-    <height>87</height>
+    <height>88</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
@@ -34,14 +34,14 @@
         <item>
          <widget class="QPushButton" name="firstChord">
           <property name="text">
-           <string extracomment="do not translate">firstChord</string>
+           <string notr="true" extracomment="do not translate">firstChord</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="secondChord">
           <property name="text">
-           <string extracomment="do not translate - only for debugging">secondChord</string>
+           <string notr="true" extracomment="do not translate - only for debugging">secondChord</string>
           </property>
          </widget>
         </item>
